# app-deb-dockerize

./: CMakeLists.txt  README.md  package.json  usr-bin.cmake
distrib/: app.dockerfile
distrib/debian/: app.control  build-pkg.sh
